Fix spacing of sidebar magazine header [WEB-3154]

--- a/frontend/scss/organisms/_o-article__primary-actions.scss
+++ b/frontend/scss/organisms/_o-article__primary-actions.scss
@@ -249,6 +249,8 @@
 }
 
 .m-article-actions--publication__logo {
+  margin-bottom: 22px;
+
   a {
     color: colors.$color__black--90;
   }
